[gd_scene load_steps=3 format=3 uid="uid://5awqyidom0l2"]

[ext_resource type="Script" uid="uid://b4bj1a02xuud3" path="res://scripts/editors/NewScenarioDialog.gd" id="1_f0svs"]
[ext_resource type="Script" uid="uid://ccoypa6qydg57" path="res://scripts/editors/helpers/UnitDDItemList.gd" id="2_8kexb"]

[node name="NewScenarioDialog" type="Window"]
auto_translate_mode = 1
oversampling_override = 1.0
title = "New Scenario"
position = Vector2i(325, 36)
size = Vector2i(500, 600)
script = ExtResource("1_f0svs")

[node name="Root" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Root"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Root/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IdLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
text = "Unique Scenario ID"

[node name="Id" type="LineEdit" parent="Root/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "required"

[node name="TitleLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
text = "Scenario name"

[node name="Title" type="LineEdit" parent="Root/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name"

[node name="TerrainLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
text = "Terrain"

[node name="TerrainRow" type="HBoxContainer" parent="Root/ScrollContainer/VBox"]
layout_mode = 2

[node name="TerrainPath" type="LineEdit" parent="Root/ScrollContainer/VBox/TerrainRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No Terrain Selected"
editable = false

[node name="SelectTerrain" type="Button" parent="Root/ScrollContainer/VBox/TerrainRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="MetaContainer" type="FoldableContainer" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
title = "Scenario Meta"

[node name="VBoxContainer" type="VBoxContainer" parent="Root/ScrollContainer/VBox/MetaContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="Description" type="TextEdit" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Description"

[node name="ThumbnailLabel" type="Label" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2
text = "Thumbnail"

[node name="PreviewCenter" type="CenterContainer" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2

[node name="PreviewContainer" type="PanelContainer" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/PreviewCenter"]
layout_mode = 2

[node name="ThumbnailPreview" type="TextureRect" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/PreviewCenter/PreviewContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ThumbnailRow" type="HBoxContainer" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2

[node name="ThumbnailPath" type="LineEdit" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/ThumbnailRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No Thumbnail Selected"
editable = false

[node name="ClearThumbnail" type="Button" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/ThumbnailRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="SelectThumbnail" type="Button" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/ThumbnailRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="VideoLabel" type="Label" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2
text = "Intro Video"

[node name="VideoRow" type="HBoxContainer" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2

[node name="VideoPath" type="LineEdit" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/VideoRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No Video Selected"
editable = false

[node name="ClearVideo" type="Button" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/VideoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="SelectVideo" type="Button" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/VideoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="SubtitlesLabel" type="Label" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2
text = "Video Subtitles"

[node name="SubtitlesRow" type="HBoxContainer" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer"]
layout_mode = 2

[node name="SubtitlesPath" type="LineEdit" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/SubtitlesRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No Subtitles Selected"
editable = false

[node name="ClearSubtitles" type="Button" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/SubtitlesRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="SelectSubtitles" type="Button" parent="Root/ScrollContainer/VBox/MetaContainer/VBoxContainer/SubtitlesRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Select"

[node name="ResourcePoolsContainer" type="FoldableContainer" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
folded = true
title = "Resource Pools"

[node name="VBoxContainer" type="VBoxContainer" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer"]
visible = false
layout_mode = 2

[node name="ReplacementPoolLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer"]
layout_mode = 2
text = "Personnel Replacement Pool"

[node name="ReplacementPool" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
suffix = "personnel"

[node name="EquipmentPoolLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer"]
layout_mode = 2
text = "Equipment Pool"

[node name="EquipmentPool" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
value = 100.0
suffix = "points"

[node name="AmmoPoolsLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer"]
layout_mode = 2
text = "Ammunition Pools"

[node name="AmmoGrid" type="GridContainer" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="SmallArmsLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Small Arms:"

[node name="SmallArms" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="TankGunLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Tank Gun:"

[node name="TankGun" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="ATGMLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "ATGM:"

[node name="ATGM" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="ATRocketLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "AT Rocket:"

[node name="ATRocket" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="HeavyWeaponsLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Heavy Weapons:"

[node name="HeavyWeapons" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="AutocannonLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Autocannon:"

[node name="Autocannon" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="MortarAPLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Mortar AP:"

[node name="MortarAP" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="MortarSmokeLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Mortar Smoke:"

[node name="MortarSmoke" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="MortarIllumLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Mortar Illum:"

[node name="MortarIllum" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="ArtilleryAPLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Artillery AP:"

[node name="ArtilleryAP" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="ArtillerySmokeLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Artillery Smoke:"

[node name="ArtillerySmoke" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="ArtilleryIllumLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Artillery Illum:"

[node name="ArtilleryIllum" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="EngineerMunLabel" type="Label" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
layout_mode = 2
text = "Engineer Munitions:"

[node name="EngineerMun" type="SpinBox" parent="Root/ScrollContainer/VBox/ResourcePoolsContainer/VBoxContainer/AmmoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100000.0
step = 10.0

[node name="UnitContainer" type="FoldableContainer" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
folded = true
title = "Player unit pool"

[node name="HBoxContainer" type="HBoxContainer" parent="Root/ScrollContainer/VBox/UnitContainer"]
visible = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="PoolContainer" type="VBoxContainer" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer/PoolContainer"]
layout_mode = 2
text = "Available Units"

[node name="UnitPoolList" type="ItemList" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer/PoolContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_8kexb")
dialog_path = NodePath("../../../../../../..")

[node name="VBoxContainer" type="VBoxContainer" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UnitAdd" type="Button" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ">"

[node name="UnitRemove" type="Button" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<"

[node name="SelectedContainer" type="VBoxContainer" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer/SelectedContainer"]
layout_mode = 2
text = "Selected Units"

[node name="UnitSelectedList" type="ItemList" parent="Root/ScrollContainer/VBox/UnitContainer/HBoxContainer/SelectedContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_8kexb")
kind = 1
dialog_path = NodePath("../../../../../../..")

[node name="ActionRow" type="HBoxContainer" parent="Root"]
layout_mode = 2

[node name="Close" type="Button" parent="Root/ActionRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="Spacer" type="Control" parent="Root/ActionRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Create" type="Button" parent="Root/ActionRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Create"
